tests/snapshots/snapshot_tests__snapshot_change_email_response@change_email.snap
---
source: tests/snapshot_tests.rs
expression: redact(&body)
---
message: Email updated
status: true
