tests/snapshots/snapshot_tests__snapshot_change_password_response@change_password.snap
---
source: tests/snapshot_tests.rs
assertion_line: 233
expression: redact(&body)
---
token: ~
user:
  createdAt: "[timestamp]"
  email: chgpwd_snap@example.com
  emailVerified: false
  id: "[uuid]"
  image: ~
  name: ChgPwd Snap
  updatedAt: "[timestamp]"
