tests/snapshots/snapshot_tests__snapshot_delete_user_response@delete_user.snap
---
source: tests/snapshot_tests.rs
expression: redact(&body)
---
message: User deleted
success: true
