tests/snapshots/snapshot_tests__snapshot_error_responses@error_401.snap
---
source: tests/snapshot_tests.rs
assertion_line: 405
expression: redact(&body_401)
---
code: INVALID_EMAIL_OR_PASSWORD
message: Invalid email or password
