tests/snapshots/snapshot_tests__snapshot_error_responses@error_409.snap
---
source: tests/snapshot_tests.rs
expression: redact(&body_409)
---
message: A user with this email already exists
