tests/snapshots/snapshot_tests__snapshot_error_responses@error_422.snap
---
source: tests/snapshot_tests.rs
assertion_line: 426
expression: redact(&body_422)
---
code: USER_ALREADY_EXISTS_USE_ANOTHER_EMAIL
message: User already exists. Use another email.
