tests/snapshots/snapshot_tests__snapshot_forget_password_response@forget_password.snap
---
source: tests/snapshot_tests.rs
assertion_line: 340
expression: redact(&body)
---
message: "If this email exists in our system, check your email for the reset link"
status: true
