tests/snapshots/snapshot_tests__snapshot_list_accounts_response@list_accounts.snap
---
source: tests/snapshot_tests.rs
assertion_line: 360
expression: redact(&body)
---
- accountId: "[uuid]"
  createdAt: "[timestamp]"
  id: "[uuid]"
  provider: credential
  scopes: []
  updatedAt: "[timestamp]"
