tests/snapshots/snapshot_tests__snapshot_signin_response@signin.snap
---
source: tests/snapshot_tests.rs
assertion_line: 137
expression: redact(&body)
---
redirect: false
token: "[session_token]"
user:
  createdAt: "[timestamp]"
  email: signin_snap@example.com
  emailVerified: false
  id: "[uuid]"
  image: ~
  name: Signin Snap
  updatedAt: "[timestamp]"
